Fix up spacing and contact list

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ h1 {
   font-size: 60%;
 }
 .contact_list {
+  padding-top: 1.5%;
   -webkit-animation: fadein 5s;
   -moz-animation: fadein 5s;
   -ms-animation: fadein 5s;
@@ -34,7 +35,6 @@ h1 {
     opacity: 1;
   }
 }
-/* Firefox < 16 */
 
 @-moz-keyframes fadein {
   from {
@@ -44,7 +44,6 @@ h1 {
     opacity: 1;
   }
 }
-/* Safari, Chrome and Opera > 12.1 */
 
 @-webkit-keyframes fadein {
   from {
@@ -66,7 +65,6 @@ h1 {
   border-bottom: 0;
   font-size: 1.5em;
   margin-right: .56em;
-  padding-bottom: 0;
   color: rgba(0, 0, 0, 1);
 }
 .contact_list a:hover i {
@@ -77,7 +75,7 @@ h1 {
   -o-transition: all 1s ease;
   transition: all 1s ease;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
-  transform: scale(1.3);
+  transform: scale(1.15);
 }
 .contact_list a i {
   -webkit-transition: all 1s ease;
